--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:3.1.5'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.5'
     implementation 'org.postgresql:postgresql:42.5.4'
+    implementation 'com.google.guava:guava:32.1.3-jre'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
