--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,7 +23,7 @@ spring:
         open-in-view: true
         show-sql: true
         hibernate:
-            ddl-auto: create
+            ddl-auto: update
     datasource:
         url: "jdbc:postgresql://localhost:5432/filter"
         username: postgres
