--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ similarity:
     update-factor: 0.1
 
 server:
-    port: 8081
+    port: 8080
 
 spring:
     jpa:
@@ -23,7 +23,7 @@ spring:
         open-in-view: true
         show-sql: true
         hibernate:
-            ddl-auto: update
+            ddl-auto: create
     datasource:
         url: "jdbc:postgresql://localhost:5432/filter"
         username: postgres
