--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,17 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '3.1.5'
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group 'com.brash'
 version '1.0-SNAPSHOT'
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
 repositories {
     mavenCentral()
@@ -12,13 +20,14 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:3.1.5'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.5'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.5'
+    implementation 'org.springframework.boot:spring-boot-starter-amqp:3.1.5'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:3.1.5'
+
     implementation 'org.postgresql:postgresql:42.5.4'
     implementation 'com.google.guava:guava:32.1.3-jre'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
-    implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.5'
-
-
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.5'
