--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,17 @@ services:
             timeout: 5s
             retries: 5
             start_period: 10s
+
+
+    rabbitmq:
+        image: rabbitmq:3-management
+        restart: always
+        environment:
+            - RABBITMQ_DEFAULT_USER=user
+            - RABBITMQ_DEFAULT_PASS=qwerty
+        volumes:
+            - ./volumes/rabbitmq:/var/lib/rabbitmq
+        ports:
+            - "15672:15672"
+        networks:
+            - backend
