--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,30 @@ networks:
     backend:
 
 services:
+    app:
+        container_name: filter_container
+        image: filter_image
+        depends_on:
+            - rabbitmq
+            - postgres
+        build:
+            context: .
+        environment:
+            DB_URL: "jdbc:postgresql://postgres:5432/filter"
+            DB_USERNAME: "postgres"
+            DB_PASSWORD: "qwerty"
+            RABBIT_HOST: "rabbitmq"
+            RABBIT_USERNAME: "user"
+            RABBIT_PASSWORD: "qwerty"
+            RABBIT_PORT: 5672
+        ports:
+            - "8080:8080"
+        networks:
+            - backend
+
     postgres:
         container_name: postgres_container
         image: postgres
-        ports:
-            - "5432:5432"
         environment:
             POSTGRES_DB: "filter"
             POSTGRES_USER: "postgres"
@@ -23,6 +42,8 @@ services:
             timeout: 5s
             retries: 5
             start_period: 10s
+        networks:
+            - backend
 
 
     rabbitmq:
