--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,19 @@ repositories {
     mavenCentral()
 }
 
+java {
+    sourceCompatibility = JavaVersion.toVersion("21")
+    targetCompatibility = JavaVersion.toVersion("21")
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:3.1.5'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.5'
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.5'
     implementation 'org.springframework.boot:spring-boot-starter-amqp:3.1.5'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:3.1.5'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
 
     implementation 'org.postgresql:postgresql:42.5.4'
     implementation 'com.google.guava:guava:32.1.3-jre'
