--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ RABBIT_HOST=localhost
 RABBIT_USERNAME=user
 RABBIT_PASSWORD=qwerty
 RABBIT_PORT=5672
+TIME_UPDATE_FILTER=120000
+TIME_UPDATE_SIMILARITY=60000
+FILTER_QUEUE=filter-queue
+FILTER_EXCHANGE=filter-exchange
