--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,9 +37,8 @@ services:
         ports:
             - "5432:5432"
         volumes:
-            - ./volumes/2. Init Database:/docker-entrypoint-initdb.d
             - ./volumes/postgres-data:/var/lib/postgresql/data
-        restart: unless-stopped
+        restart: on-failure
         healthcheck:
             test: [ "CMD-SHELL", "pg_isready -U postgres" ]
             interval: 20s
