--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ rabbit:
     exchange: ${FILTER_EXCHANGE}
     add-item-class: ${ITEM_CLASS}
     add-mark-class: ${MARK_CLASS}
-    add-user-class: ${USER_MARK}
+    add-user-class: ${USER_CLASS}
 
 similarity:
     smoothing-factor: 0.00001
